# etl-pandas-json-parquet

./: README.md  etl.py  log.py  pipeline.py  pyproject.toml  schema.py  timer.py  vendas.parquet
