[tool.poetry]
name = "etl-pandas-json-parquet"
version = "0.1.0"
description = ""
authors = ["Roberto Guedes <robertoguedes@edu.univali.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandera = "^0.20.4"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
